Enhance documentation & Update jar and scripts